--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Yuk</string>
-
+    <array name="iris_colors">
+        <item>@color/official_link_blue</item>
+        <item>@color/official_jobs_hiring</item>
+        <item>@color/official_pink</item>
+    </array>
 </resources>
