--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,15 @@
 <resources>
     <string name="app_name">Yuk</string>
-    <array name="iris_colors">
+    <array name="iris_color_light">
         <item>@color/official_link_blue</item>
         <item>@color/official_jobs_hiring</item>
         <item>@color/official_pink</item>
     </array>
+
+    <array name="iris_color_dark">
+        <item>@color/white</item>
+        <item>@color/official_jobs_hiring</item>
+        <item>@color/official_teams</item>
+    </array>
+
 </resources>
