--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="dribbble_oauth_activity_toolbar_title">授权登录</string>
     <string name="dribble_oauth_error_message"><![CDATA[>_<||| 服务器好像来大姨妈了]]></string>
     <string name="transition_shot_root">shot_root</string>
-    <string name="sample_description">dsadsa</string>
+    <string name="sample_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
 
 
     <array name="iris_color_light">
